--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "eslint": "^4.15.0",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.0"
+  },
+  "dependencies": {
+    "d3": "^5.9.1"
   }
 }
