--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "devDependencies": {
     "eslint": "^4.15.0",
     "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.0"
+    "webpack-dev-server": "3.1.11"
   },
   "dependencies": {
     "d3": "^5.9.1"
